--- a/src/com/toy/anagrams/ui/Anagrams.form
+++ b/src/com/toy/anagrams/ui/Anagrams.form
@@ -36,7 +36,7 @@
     </Menu>
   </NonVisualComponents>
   <Properties>
-    <Property name="title" type="java.lang.String" value="AnagramsAnagrams"/>
+    <Property name="title" type="java.lang.String" value="reasoning game"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="menuBar" type="java.lang.String" value="mainMenu"/>
